// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Snapshots All 1`] = `
<hr
  className="sc-AxjAm cLELDF className"
  height={10}
/>
`;

exports[`Alert Snapshots Height 1`] = `
<hr
  className="sc-AxjAm iHhoQU"
  height={15}
/>
`;

exports[`Alert Snapshots No props 1`] = `
<hr
  className="sc-AxjAm eOUZDV"
  height={1}
/>
`;

exports[`Alert Snapshots className 1`] = `
<hr
  className="sc-AxjAm eOUZDV className"
  height={1}
/>
`;
